# dual-app-01

./: .gitignore  databricks.local.yml.example  databricks.yml  dual-app.html  mise.toml  pyproject.toml  skills-lock.json
.agents/skills/databricks-apps-python/: SKILL.md
.agents/skills/databricks-serverless-migration/: SKILL.md
.agents/skills/databricks-serverless-migration/references/: code-patterns.md  configuration-guide.md  mlflow-uc-patterns.md
.claude/skills/: archify  databricks-agent-bricks  databricks-ai-functions  databricks-aibi-dashboards  databricks-app-design  databricks-apps-python  databricks-dbsql  databricks-docs  databricks-execution-compute  databricks-genie  databricks-iceberg  databricks-lakeflow-connect  databricks-metric-views  databricks-ml-training  databricks-mlflow-evaluation  databricks-python-sdk  databricks-spark-structured-streaming  databricks-synthetic-data-gen  databricks-unity-catalog  databricks-unstructured-pdf-generation  databricks-zerobus-ingest
.github/instructions/: local.instructions.md  mise.instructions.md  python.instructions.md
app-a-frontend/: app.py  app.yaml  pyproject.toml  requirements.txt
app-a-frontend/static/: index.html
app-b-backend/: app.py  app.yaml  pyproject.toml
scripts/: _tools.py  apply_skill_overrides.py  gen_local_config.py  install_ai_dev_kit_skills.py  install_databricks_skills.py  sync.py  update_databricks_skills.py
