[project]
name = "dual-app-01-dev"
version = "0.1.0"
description = "Root dev environment for the Databricks Connect VS Code extension. Not deployed; the two apps have their own pyproject.toml/venv."
requires-python = ">=3.12"
dependencies = [
    # databricks-connect 18 matches serverless environment version 5 (Python 3.12).
    "databricks-connect>=18,<19",
    "databricks-sdk>=0.40.0",
]

[tool.uv]
package = false
