[project]
name = "dual-app-b"
version = "0.1.0"
description = "App B — Databricks backend (SQL warehouse, Genie, secrets)"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.40.0",
    "databricks-sql-connector>=3.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
]

[tool.uv]
package = false
